--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -23,4 +23,10 @@
 
 
 
+
+// import dark theme
+@use "element-plus/theme-chalk/src/dark/css-vars.scss" as *;
+
+
 @import "element-plus/theme-chalk/src/index.scss";
+
