--- a/src/scss/bootstrap.scss
+++ b/src/scss/bootstrap.scss
@@ -28,5 +28,5 @@ $light: $gray-50 !default;
 $dark: #4b4b4b !default;
 
 
-@import "../node_modules/bootstrap/scss/bootstrap";
+@import "../node_modules/bootstrap/scss/bootstrap-utilities.scss";
 
